[package]
name = "frontier-outpost"
version = "0.1.0"
edition = "2021"

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]

[dependencies.env_logger]
version = "0.10.0"
default-features = false

[dependencies.wgpu]
version = "0.14.2"
default-features = false

[dependencies.winit]
version = "0.27.5"
default-features = false
features = ["x11"]

[dependencies.bytemuck]
version = "1.13.0"
default-features = false
features = ["derive"]
